# xmsextractor

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  SetupCpp2015debug.bat  Setup_py.bat  Test_py.bat  _clang-format  _doxygen_mainpage_8md_source.html  _extractor___tutorial_8md_source.html  _xm_u_grid2d_data_extractor_8cpp.html  _xm_u_grid2d_data_extractor_8cpp_source.html  _xm_u_grid2d_data_extractor_8h.html  _xm_u_grid2d_data_extractor_8h.js  _xm_u_grid2d_data_extractor_8h_source.html  _xm_u_grid2d_data_extractor_8t_8h.html  _xm_u_grid2d_data_extractor_8t_8h_source.html  _xm_u_grid2d_polyline_data_extractor_8cpp.html  _xm_u_grid2d_polyline_data_extractor_8cpp.js  _xm_u_grid2d_polyline_data_extractor_8cpp_source.html  _xm_u_grid2d_polyline_data_extractor_8h.html  _xm_u_grid2d_polyline_data_extractor_8h_source.html  _xm_u_grid2d_polyline_data_extractor_8t_8h.html  _xm_u_grid2d_polyline_data_extractor_8t_8h_source.html  _xm_u_grid_triangles2d_8cpp.html  _xm_u_grid_triangles2d_8cpp.js  _xm_u_grid_triangles2d_8cpp_source.html  _xm_u_grid_triangles2d_8h.html  _xm_u_grid_triangles2d_8h_source.html  _xm_u_grid_triangles2d_8t_8h.html  _xm_u_grid_triangles2d_8t_8h_source.html  annotated.html  annotated.js  annotated_dup.js  build.py  build.toml  class_xm_u_grid2d_data_extractor_unit_tests-members.html  class_xm_u_grid2d_data_extractor_unit_tests.html  class_xm_u_grid2d_data_extractor_unit_tests.js  (+52 more)
.github/workflows/: Linux-CI.yaml  Mac-CI.yaml  Windows-CI.yaml  XmsExtractor-CI.yaml
Doxygen/: Doxyfile  DoxygenMainpage.md  Location_Tutorial.md
Doxygen/html/images/: tutorial_locations_transient.gpr
_package/: pyproject.toml  setup.py
_package/tests/: XmUGrid2dDataExtractor_pyt.py  XmUGrid2dPolylineDataExtractor_pyt.py  XmUGridTriangles2d_pyt.py
_package/xms/extractor/: __init__.py  ugrid_2d_data_extractor.py  ugrid_2d_polyline_data_extractor.py  ugrid_triangles.py
_package/xmsextractor/: __init__.py
_package/xmsextractor/extractor/: __init__.py  ugrid_2d_data_extractor.py  ugrid_2d_polyline_data_extractor.py
dev/: Setup_cpp.bat  Setup_py.bat  Test_py.bat  setenv.bat  setenv.sh  xmsprofile_debug  xmsprofile_py  xmsprofile_release
examples/: ExtractorTutorial.html  boundary_polys.prj  boundary_polys.shp  boundary_polys.shx  cimmaron.dbf  cimmaron.shp  cimmaron.shx  extractor_tools.py  ugrid_tools.py
examples/ExtractorRealData/: CellsData.txt  DepthsData.txt  ExtractorRealData.ipynb  PointsData.txt  boundary_polys.dbf  extractor_tools.py  ugrid_tools.py
examples/ExtractorTutorial/: ExtractorTutorial.ipynb  ugrid_tools.py
images/: tutorial_locations_transient.gpr
pydocs/: .buildinfo  genindex.html  getting_started.html  gettingstarted.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
pydocs/.doctrees/: environment.pickle  getting_started.doctree  index.doctree  modules.doctree
pydocs/.doctrees/modules/: UGrid2dDataExtractor.doctree  UGrid2dPolylineDataExtractor.doctree
pydocs/_sources/: index.rst.txt
pydocs/_sources/modules/: UGrid2dDataExtractor.rst.txt  UGrid2dPolylineDataExtractor.rst.txt
pydocs/modules/: UGrid2dDataExtractor.html  UGrid2dPolylineDataExtractor.html
pydocs/source/: conf.py  getting_started.rst  index.rst  modules.rst
pydocs/source/modules/: UGrid2dPolylineDataExtractor.rst
pydocs/source/modules/extractor/: XmUGrid2dDataExtractor.rst  XmUGrid2dPolylineDataExtractor.rst
search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_b.js  classes_0.js  files_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  pages_0.js  pages_1.js  search.js  searchdata.js  variables_0.js
test_package/: CMakeLists.txt  conanfile.py  example.cpp
xmsextractor/extractor/: XmUGrid2dDataExtractor.cpp  XmUGrid2dDataExtractor.h  XmUGrid2dDataExtractor.t.h  XmUGrid2dPolylineDataExtractor.cpp  XmUGrid2dPolylineDataExtractor.h  XmUGrid2dPolylineDataExtractor.t.h
xmsextractor/python/: xmsextractor_py.cpp
xmsextractor/python/extractor/: XmUGrid2dDataExtractor_py.cpp  XmUGrid2dDataExtractor_pyt.py  XmUGrid2dPolylineDataExtractor_py.cpp  XmUGrid2dPolylineDataExtractor_pyt.py  extractor_py.cpp  extractor_py.h
xmsextractor/python/ugrid/: XmUGridTriangles2d_py.cpp  ugrid_py.cpp  ugrid_py.h
xmsextractor/ugrid/: XmElementEdge.cpp  XmElementEdge.h  XmElementMidpointInfo.h  XmUGridTriangles2d.cpp  XmUGridTriangles2d.h  XmUGridTriangles2d.t.h  XmUGridTriangulator.cpp  XmUGridTriangulator.h  XmUGridTriangulator.t.h  XmUGridTriangulatorBase.cpp  XmUGridTriangulatorBase.h  XmUGridTriangulatorBase.t.h
