[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "xmsextractor"
version = "9.0.5"
description = "Extractor library for XMS products"
license = { text = "BSD 2-Clause License" }
readme = "README.md"
requires-python = ">=3.10"
keywords = []

authors = [{ name = "Aquaveo" }]

# Dependencies
dependencies = [
    "numpy",
    "xmscore>=6.0.0",
    "xmsgrid>=7.0.0,<8.0.0",
    "xmsinterp>=6.0.0"
]

[tool.setuptools.packages.find]
include = ["xms*"]

[tool.setuptools.package-data]
# Include additional data files
"*" = ["*.pyd", "*.so"]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py", "*_pyt.py"]
